# sfml_basics

./: CMakeLists.txt  CMakePresets.json  Readme.md  main.cpp  snake.cpp  tut1.cpp
